--- a/public_html/static/css/style_tablones.css
+++ b/public_html/static/css/style_tablones.css
@@ -1,10 +1,89 @@
 /*CONTENIDO*/
-div#content {
+#content_inicio {
   min-width: 1000px;
   padding:20px; /* bottom padding for footer */
-  background: url("../img/fondo_body.jpg") no-repeat center center; 
+  padding-top: 40px;
+  background: url("../img/test_fondo.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+.container_tablones {
+	padding: 10px 20px 10px 20px;
+}
+.container_tablones h5{
+	color: white;
+}
+.tablones {
+	text-align: center;
+}
+.tablon {
+	display: inline-block;
+  width: 400px;
+  height: 250px;
+  margin: 10px;
+  background-image: url("../img/placeholder_tablon.png");
+  cursor: pointer;
+}
+.titulo {
+	background-color: #202020;
+	padding: 10px;
+	position: absolute;
+  bottom: 0;
+  width: 100%;
+
+}
+.tablon .descripcion {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 192px;
+  padding: 20px;
+  background-color: rgba(0,0,0,0.6);
+  text-align: justify;
+}
+
+.tablon:hover .descripcion {
+  visibility: visible;
+}
+
+.titulo p{
+	padding-left: 4px;
+	padding-right: 4px;
+	color: white;
+}
+.descripcion p {
+  color: white;
+}
+
+.anadir_tablon {
+	background-image: url("../img/placeholder_anadir_tablon.png");
+}
+.titulo{
+}
+.container_tablones h5{
+	margin: 10px 20px 10px 20px;
+
+}
+
+/* Grow */
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
